# MyLLM

./: CMakeLists.txt  README.md  log.md
Test/: CMakeLists.txt
Test/Test_op/: test_op_add.cpp
Test/Test_op/cpu/: test_op_add.cpp
Test/Test_tensor/: test_buffer.cpp  test_tensor.cpp
core/include/base/: allocator.h  base.h  buffer.h
core/include/op/: add.h  encode.h  layer.h
core/include/tensor/: tensor.h
core/source/base/: allocator.cpp  allocator_cpu.cpp  allocator_cuda.cpp  base.cpp  buffer.cpp
core/source/op/: add.cpp  layer.cpp
core/source/op/kernels/: kernels_interface.cpp  kernels_interface.h
core/source/op/kernels/cpu/: emb_kernel.cpp  matmul_kernel.cpp  mha_kernel.cpp  rmsnorm_kernel.cpp  softmax_kernel.cpp  swiglu_kernel.cpp
core/source/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cu  emb_kernel.cu  matmul_kernel.cu  rmsnorm_kernel.cu  swiglu_kernel.cu
core/source/tensor/: tensor.cpp
